--- a/app/src/assets/styles/_shared-styles.scss
+++ b/app/src/assets/styles/_shared-styles.scss
@@ -16,7 +16,7 @@ section {
 	background-attachment:fixed !important;
 
 	@media (max-device-width: 1024px) {
-		background-attachment:static !important;
+		background-attachment:scroll !important;
 	}
 }
 
